[package]
name = "snake_piston"
version = "0.1.0"
authors = ["Nathan Hare <me@laspruca.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.52.0"
piston2d-graphics = "0.39.0"
piston_window = "0.116.0"
piston2d-opengl_graphics = "0.76.0"
rand = "0.7.3"
find_folder = "0.3.0"
